# Tm-Oc

./: Cargo.toml  README.md  x86_64-Tm_os.json
.cargo/: config.toml
src/: .main.rs.swn  .main.rs.swo  .main.rs.swp  allocator.rs  fs.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  paging.rs  vga_buffer.rs
src/task/: keyboard.rs  mod.rs  simple_executor.rs
