[package]
name = "Tm_Os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = {  version = "0.9.33" , features = ["map_physical_memory"] }
spin = "0.5.2"
x86_64 = "0.15.2"
linked_list_allocator = "0.9"
pic8259 = "0.10.1"
volatile = "0.2.6"
pc-keyboard = "0.7.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }


[profile.dev]
panic = "abort"
test = false

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
